--- a/README.rdoc
+++ b/README.rdoc
@@ -75,5 +75,5 @@ Support is available on our development mailing list: dev@intermine.org
 
 == License
 
-This code is Open Source under the LGPL. Source code for all InterMine code
-can be checked out from svn://subversion.flymine.org/flymine
+This code is Open Source under the LGPL. Source code for this gem
+can be checked out from https://github.com/intermine/intermine-ws-ruby
